add @login required

--- a/neighbor/templates/registration/registration_form.html
+++ b/neighbor/templates/registration/registration_form.html
@@ -39,7 +39,7 @@
 </head>
 
 <body id="page-top"
-  style="background-image:url(../../static/img/bluepen.jpg);color: white; background-repeat: no-repeat; background-size: cover;">
+  style="background-image:url(../../static/img/header-bg.jpg);color: white; background-repeat: no-repeat; background-size: cover;">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -62,7 +62,7 @@
       <div class="col-lg-7 my-auto">
         <div class="header-content mx-auto">
           <h1 class="mb-5">
-            <hr>Project Hub</h1>
+            <hr>Neighborhood Watch</h1>
 
         </div>
       </div>
@@ -107,7 +107,7 @@
   </header>
   <footer>
     <div class="container">
-      <p>&copy; Project Hub Website 2020. All Rights Reserved.</p>
+      <p>&copy; Neighborhood Watch Website 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
