--- a/neighbor/templates/searchbiz.html
+++ b/neighbor/templates/searchbiz.html
@@ -5,7 +5,7 @@
     <div class="row">
 
         {% if bizsearched %}
-        <h1 style="color: white; text-align: left; margin-left: 10%;">Found {{ bizsearched|length }} of searched
+        <h1 style="color: black; text-align: left; margin-left: 10%;">Found {{ bizsearched|length }} of searched
             category {{message}}
         </h1>
 
@@ -31,7 +31,7 @@
 
 </div>
 {% else %}
-<h1 style="color:white"> Found 0 categories for the search term {{message}}</h1>
+<h1 style="color:black"> Found 0 categories for the search term {{message}}</h1>
 {% endif %}
 
 
