--- a/neighbor/templates/searchhood.html
+++ b/neighbor/templates/searchhood.html
@@ -7,7 +7,7 @@
     <div class="row">
 
         {% if hoodsearched %}
-        <h1 style="color: white; text-align: left; margin-left: 10%;">Found {{ hoodsearched|length }} of searched
+        <h1 style="color: black; text-align: left; margin-left: 10%;">Found {{ hoodsearched|length }} of searched
             category {{message}}
         </h1>
 
@@ -33,7 +33,7 @@
 
 </div>
 {% else %}
-<h1 style="color:white"> Found 0 categories for the search term {{message}}</h1>
+<h1 style="color:black"> Found 0 categories for the search term {{message}}</h1>
 {% endif %}
 
 
