--- a/neighbor/templates/testhome.html
+++ b/neighbor/templates/testhome.html
@@ -172,7 +172,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Neighborhoods</h2>
+          <h2 class="section-heading text-uppercase">Registered Neighborhoods</h2>
           <h3 class="section-subheading text-muted">Home is where the heart is.</h3>
         </div>
       </div>
@@ -209,12 +209,9 @@
                     <div class="modal-body">
                       <!-- Project Details Go Here -->
                       <h2 class="text-uppercase">{{hood.hoodname}}</h2>
-                      <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                      <p class="item-intro text-muted"></p>
                       <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                      <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Est
-                        blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
-                        expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                      <p></p>
                       <ul class="list-inline">
                         <li>Location: {{hood.hoodlocation}}</li>
                       </ul>
